version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/AdditionalProperties/DoubleProperty.rst.txt
.. vale off



:class:`DoubleProperty`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.AdditionalProperties.DoubleProperty(name: str, groupName: str)

   Bases: :py:obj:`object`


   
   Provides a way to create properties that can hold double type values.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DoubleProperty

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~Resume`
            - Resume method.
          * - :py:attr:`~ToString`
            - ToString method.
          * - :py:attr:`~add_OnAfterPropertyChanged`
            - add_OnAfterPropertyChanged method.
          * - :py:attr:`~add_OnBeforePropertyChanged`
            - add_OnBeforePropertyChanged method.
          * - :py:attr:`~remove_OnAfterPropertyChanged`
            - remove_OnAfterPropertyChanged method.
          * - :py:attr:`~remove_OnBeforePropertyChanged`
            - remove_OnBeforePropertyChanged method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Access`
            - Access property.
          * - :py:attr:`~CanParameterize`
            - CanParameterize property.
          * - :py:attr:`~DisplayName`
            - The name of the property shown in the UI. If not set, the Name property is used.
          * - :py:attr:`~GroupName`
            - The group name of the property shown in the UI, and used to separate properties based on group name.
          * - :py:attr:`~ID`
            - ID property.
          * - :py:attr:`~IsParameterized`
            - IsParameterized property.
          * - :py:attr:`~Name`
            - The name of the property.
          * - :py:attr:`~Owner`
            - Owner property.
          * - :py:attr:`~ParameterType`
            - ParameterType property.
          * - :py:attr:`~PropertyControl`
            - PropertyControl property.
          * - :py:attr:`~ReadOnly`
            - Returns whether a property is readonly.
          * - :py:attr:`~Tag`
            - Tag property.
          * - :py:attr:`~Tooltip`
            - The tooltip of the property in the UI.
          * - :py:attr:`~Type`
            - Type property.
          * - :py:attr:`~Valid`
            - Returns whether a property is valid.
          * - :py:attr:`~ValidRange`
            - Tuple that can be used to control the upper and lower bounds of a double property.
          * - :py:attr:`~Value`
            - The stored value of the property.
          * - :py:attr:`~ValueString`
            - Get the string representation of the value.







Property detail
---------------
.. py:property:: Access
   :type: Optional[Ansys.Common.Interop.WBPropertyBrowsing.AnsPropertyAccess]


   
   Access property.
















   ..
       !! processed by numpydoc !!

.. py:property:: CanParameterize
   :type: Optional[bool]


   
   CanParameterize property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplayName
   :type: Optional[str]


   
   The name of the property shown in the UI. If not set, the Name property is used.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupName
   :type: Optional[str]


   
   The group name of the property shown in the UI, and used to separate properties based on group name.
















   ..
       !! processed by numpydoc !!

.. py:property:: ID
   :type: Optional[int]


   
   ID property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsParameterized
   :type: Optional[bool]


   
   IsParameterized property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   The name of the property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Owner
   :type: Optional[Any]


   
   Owner property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ParameterType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ParameterType]


   
   ParameterType property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PropertyControl
   :type: Optional[Ansys.ACT.Mechanical.AdditionalProperties.Control]


   
   PropertyControl property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]


   
   Returns whether a property is readonly.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tag
   :type: Optional[Any]


   
   Tag property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tooltip
   :type: Optional[str]


   
   The tooltip of the property in the UI.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[System.UInt16]


   
   Type property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Valid
   :type: Optional[bool]


   
   Returns whether a property is valid.
















   ..
       !! processed by numpydoc !!

.. py:property:: ValidRange
   :type: Optional[tuple]


   
   Tuple that can be used to control the upper and lower bounds of a double property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Value
   :type: Optional[Any]


   
   The stored value of the property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ValueString
   :type: Optional[str]


   
   Get the string representation of the value.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Resume(property: Ansys.ACT.Mechanical.AdditionalProperties.CustomProperty) -> None

   
   Resume method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: add_OnAfterPropertyChanged(value: System.EventHandler[Any]) -> None

   
   add_OnAfterPropertyChanged method.

   ..
       !! processed by numpydoc !!

.. py:method:: add_OnBeforePropertyChanged(value: System.EventHandler[Any]) -> None

   
   add_OnBeforePropertyChanged method.

   ..
       !! processed by numpydoc !!

.. py:method:: remove_OnAfterPropertyChanged(value: System.EventHandler[Any]) -> None

   
   remove_OnAfterPropertyChanged method.

   ..
       !! processed by numpydoc !!

.. py:method:: remove_OnBeforePropertyChanged(value: System.EventHandler[Any]) -> None

   
   remove_OnBeforePropertyChanged method.

   ..
       !! processed by numpydoc !!



.. vale on